Fixed overflow issues with menu

--- a/css/aboutStyle.css
+++ b/css/aboutStyle.css
@@ -59,6 +59,7 @@ body{
 	background-color: #333;
 	margin: 0px;
 	padding: 0px;
+	overflow: auto;
 }
 
 .text{
