--- a/css/alumniStyle.css
+++ b/css/alumniStyle.css
@@ -58,6 +58,7 @@ body{
 	background-color: #333;
 	margin: 0px;
 	padding: 0px;
+	overflow: auto;
 }
 
 .text{
