--- a/css/contactStyle.css
+++ b/css/contactStyle.css
@@ -64,6 +64,7 @@ img {
 	background-color: #333;
 	margin: 0px;
 	padding: 0px;
+	overflow: auto;
 }
 
 .text{
