--- a/css/recruitmentStyle.css
+++ b/css/recruitmentStyle.css
@@ -63,6 +63,7 @@ img {
 	background-color: #333;
 	margin: 0px;
 	padding: 0px;
+	overflow: auto;
 }
 
 .text{
